Fixing stacked bars border spacing on return to top button

--- a/lg-main-9.5.19.css
+++ b/lg-main-9.5.19.css
@@ -1,8 +1,6 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,400;0,700;1,400;1,500;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
-
-/* A linked file uploaded on the libguides CMS that provides the styling for Ask a Librarian button */
 <link rel="stylesheet" type="text/css" href="//libapps.s3.amazonaws.com/sites/197/include/lib-main-min.css">
 <script src="https://kit.fontawesome.com/6cef20ef42.js" crossorigin="anonymous"></script>
 
@@ -1168,6 +1166,13 @@ select {
     margin: 0 auto -60px;
     /* Pad bottom by footer height */
     padding: 0 0 60px;
+}
+
+/* There may be multiple font awesome stylings stepping on each other here */
+/* Fixes the stacked spacing on the scroll to top button */
+.svg-inline--fa.fa-stack-2x {
+    height:4rem;
+    width:4rem;
 }
 
 footer.achieve-2 {
